# voicenotes-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml
src/voicenotes_mcp/: server.py
