[project]
name = "voicenotes-mcp"
version = "0.1.0"
description = "VoiceNotes MCP server - multi-user, key-in-path"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voicenotes_mcp"]

[project.scripts]
voicenotes-mcp = "voicenotes_mcp.server:main"
